--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -7,3 +7,4 @@
 @import './components/checkbox';
 @import './components/item';
 @import './components/error-message';
+@import './components/editor';
