--- a/imports/client/styles/_base.scss
+++ b/imports/client/styles/_base.scss
@@ -1,4 +1,5 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -8,7 +9,9 @@ html {
 }
 
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  background-color: $body-background-color;
+  color: $body-default-color;
+  font-family: $body-default-font-family;
   font-size: $base-font-size;
 }
 
@@ -28,15 +31,17 @@ h5 {
 }
 
 a {
-  color: black;
+  color: $body-default-color;
 }
 
 p {
   margin-bottom: $space;
 }
 
-input[type=text], input[type=email], input[type=password] {
+input[type=text], input[type=email], input[type=password], textarea {
   border: 1px solid $input-border;
+  color: $body-default-color;
+  font-family: $body-default-font-family;
   font-size: $base-font-size;
   margin-bottom: $space;
   padding: $input-spacing;
