--- a/imports/client/styles/components/_item.scss
+++ b/imports/client/styles/components/_item.scss
@@ -1,3 +1,4 @@
+// item
 .item {
   background: $item-bg;
   border: 1px solid $item-border;
@@ -20,4 +21,12 @@
 .item--buttons {
   display: flex;
   justify-content: space-between;
+}
+
+// item list
+.item-list {
+  background-color: white;
+  border: 1px solid $grey;
+  overflow-y: auto;
+  width: 100%;
 }
