--- a/imports/client/styles/components/_page-content.scss
+++ b/imports/client/styles/components/_page-content.scss
@@ -1,5 +1,18 @@
 .page-content {
+  display: flex;
+  height: $page-content-heigth;
   margin: 0 auto;
   max-width: $site-max-width;
-  padding: $space;
+  padding: $large-space $space;
+}
+
+.page-content__sidebar {
+  display: flex;
+  flex: 3;
+  padding-right: $large-space;
+}
+
+.page-content__main {
+  display: flex;
+  flex: 7;
 }
