--- a/imports/client/styles/components/_button.scss
+++ b/imports/client/styles/components/_button.scss
@@ -2,14 +2,15 @@
   background-color: $button-bg;
   border: none;
   border-radius: 5px;
+  box-shadow: 2px 4px 2px -2px gray;
   color: $button-color;
   cursor: pointer;
   font-size: $base-font-size;
   line-height: 1.2;
   margin-bottom: $space;
   padding: $input-spacing;
+  transition: background-color .3s ease;
   text-transform: uppercase;
-  box-shadow: 2px 4px 2px -2px gray;
 }
 .button:hover {
   background-color: $button-hv;
