--- a/imports/client/styles/components/_item.scss
+++ b/imports/client/styles/components/_item.scss
@@ -1,10 +1,19 @@
 // item
 .item {
-  background: $item-bg;
-  border: 1px solid $item-border;
-  box-shadow: 2px 4px 2px -2px gray;
-  margin-bottom: $space;
+  border-left: $item-border-width solid transparent;
+  cursor: pointer;
   padding: $space;
+  transition: background-color .3s ease, border-left .3s ease;
+}
+
+.item:hover {
+  background-color: $grey-bg;
+  border-left: $item-border-width solid $grey;
+}
+
+.item--selected, .item--selected:hover {
+  background-color: $grey-bg;
+  border-left: $item-border-width solid $item-border-select;
 }
 
 .item__message {
@@ -23,10 +32,37 @@
   justify-content: space-between;
 }
 
+.item__title {
+  font-size: $base-font-size;
+  font-weight: normal;
+  margin-bottom: .4rem;
+}
+
+.item--selected .item__title {
+  font-weight: bold;
+}
+
+.item__date {
+  color: $dark-grey;
+  margin: 0;
+}
+
 // item list
 .item-list {
   background-color: white;
   border: 1px solid $grey;
-  overflow-y: auto;
+  overflow-y: scroll;
   width: 100%;
+}
+
+.item-list__header {
+  display: flex;
+  flex-direction: column;
+  padding: $space;
+}
+
+.empty-item {
+  font-style: italic;
+  padding: $space;
+  text-align: center;
 }
