--- a/imports/client/styles/components/_header.scss
+++ b/imports/client/styles/components/_header.scss
@@ -17,3 +17,13 @@
 .header__title {
   margin: 0;
 }
+
+.header__img {
+  height: 2.2rem;
+  cursor: pointer;
+  width: 2.2rem;
+
+  @include desktop {
+    display: none;
+  }
+}
